fix: force home view to always be visible if screen stretches beyond medium

--- a/scss/modules/_home.scss
+++ b/scss/modules/_home.scss
@@ -18,4 +18,8 @@
     @include e(btn) {
         margin-top: 30px;
     }
+
+    @include mq(medium) {
+        display: flex !important;
+    }
 }
